# Core-Stitcher

./: .dockerignore  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  README.md  WORKING_PRODUCT.md  alembic.ini  docker-compose.yaml  pyproject.toml  pyrightconfig.json
.claude/: settings.json
.claude/agents/: topology-triage.md
.claude/hooks/: post-tool-use-audit.sh  pre-tool-use-safety.sh  stop-session-check.sh
.claude/skills/: network-diagnostician.md  network-operator.md  remediation-planner.md  topology-verifier.md
alembic/: env.py  script.py.mako
alembic/versions/: 001_initial_schema.py
deploy/: stitch-backend.service  stitch-lite.service
docs/: INTEGRATION-PLAN-GROUNDED.md  Integration Plan_ Core‑Stitcher & Related Projects.md  OPTIONS-AND-MODULES.md  START-HERE-AI.md  briefing-explorer-v0.md  repo-inventory-2026-05-01.md  the-stitch-activation-gate-v1.md
docs/architecture/: alpha-counter-proposals-chatgpt.md  alpha-entry-checklist.md  alpha-proposals.md  canonical-gaps.md  core-thesis.md  custom-routines-inverse-map.md  explorer-alpha-roadmap.md  memory-model.md  module-system.md  project-first-architecture.md  self-configuration.md  spine-definition.md  spine-missing-points.md  spine-open-questions.md  spine-remaining-gaps.md  steal-map.md  vos-contracts-interface-map.md
docs/ops/: Alpha-live-test-26-4-10-2215.md  Alpha-test-26-4-10-2130.md  alpha-live-results-2026-04-10.md  canary-apply-checklist.md  opnsense-api-validation-2026-04-11.md  remote-debugging.md
docs/specs/: 2026-04-07-network-topology-visualizer-design.md  2026-04-07-vos-preflight-counter-proposal.md  2026-04-07-vos-preflight-final-design.md  2026-04-10-core-stitcher-planning-after-claude-code-ga.md  CHATGPT-COncept finalization.md
frontend/: Dockerfile  index.html  nginx.conf  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  router.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
output/run1/: diagnostics.json  merged_snapshot.json  raw_observations.json  summary.json  verification_report.json
output/run2/: merged_snapshot.json  raw_observations.json  summary.json  verification_report.json
output/run3/: merged_snapshot.json  raw_observations.json  summary.json  verification_report.json
output/run4/: diagnostics.json  merged_snapshot.json  raw_observations.json  summary.json  verification_report.json
schemas/: event.schema.json  module-contract.schema.json  node.schema.json  project-manifest.schema.json
scripts/: alpha_run.py  dev_down.sh  dev_up.sh  lab_preflight.py  opnsense_sweep.py  smoke_test.sh  smoke_ui.sh
src/stitch/sdk/: auth.py  (+5 more)
src/stitch_workbench/: __init__.py
src/vos_workbench/: errors.py
tests/collectkit/: test_merger.py
tests/contractkit/: test_protocols.py
tests/executorkit/: test_local.py  test_openai_compat.py  test_protocol.py  test_sidecar.py  test_topology.py  test_transport.py
tests/fixtures/: opnsense_interfaces.json  proxmox_pve_hx310_db.json  switchcraft_onti_backend.json  topology_sample.json
tests/graphkit/: test_diagnostics.py  test_neighbors.py  test_subgraph.py  test_traversal.py  test_vlan.py
tests/integration/: test_alpha_routing.py  test_end_to_end.py
tests/interfacekit/: test_explorer_routes.py  test_health_route.py  test_module.py  test_routes.py
tests/modelkit/: test_device.py  test_enums.py  test_explorer.py  test_impact.py  test_link.py  test_observation.py  test_port.py  test_topology.py  test_trace.py  test_verification.py
tests/opnsensecraft/: test_collector.py  test_multi_adapter.py  test_normalizer.py
tests/orchestration/: test_budget.py  test_routing.py  test_runner.py  test_runner_routing.py
tests/plannerkit/: test_planner.py
tests/proxmoxcraft/: test_collector.py  test_normalizer.py  test_three_adapter.py
tests/registry/: test_executor_registry.py
tests/reviewkit/: test_models.py
tests/stitch_cli/: conftest.py  test_app.py  test_device.py  test_impact.py  test_output.py  test_preflight.py  test_report.py  test_review.py  test_run.py  test_search.py  test_show.py  test_topology.py  test_trace.py
topologies/: lab.json
(+354 files in other folders)
