[project]
name = "core-stitcher"
version = "0.1.0"
description = "Core-Stitcher — backbone + modules + orchestration"
readme = "README.md"
authors = [
    { name = "emesix", email = "emesix@xs4all.nl" }
]
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.135.3",
    "fastmcp>=2.0.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pyyaml>=6.0.3",
    "rich>=14.0.0",
    "sqlmodel>=0.0.38",
    "structlog>=25.5.0",
    "typer[all]>=0.15.0",
    "uvicorn[standard]>=0.42.0",
    "textual>=3.0.0",
    "websockets>=16.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.20",
]

[project.scripts]
stitch-workbench = "stitch_workbench:main"
project-stitcher = "stitch.apps.project_stitcher.cli:main"
stitch = "stitch.apps.operator.app:main"
stitch-tui = "stitch.apps.tui.app:main"
stitch-lite = "stitch.apps.lite.app:main"
stitch-mcp = "stitch.mcp.server:main"

[project.entry-points."stitch.modules"]
"resource.switchcraft" = "stitch.switchcraft:SwitchcraftModule"
"resource.opnsensecraft" = "stitch.opnsensecraft:OpnsensecraftModule"
"resource.proxmoxcraft" = "stitch.proxmoxcraft:ProxmoxcraftModule"
"resource.collectkit" = "stitch.collectkit:CollectkitModule"
"core.verifykit" = "stitch.verifykit:VerifykitModule"
"core.tracekit" = "stitch.tracekit:TracekitModule"
"integration.interfacekit" = "stitch.interfacekit:InterfacekitModule"

[build-system]
requires = ["uv_build>=0.11.1,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "stitch_workbench"

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--import-mode=importlib"

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "TCH"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["TCH003", "B017"]
"src/stitch/modelkit/**" = ["TCH001", "TCH003"]
"src/stitch/apps/operator/app.py" = ["TCH001", "TCH003"]

[tool.ruff.lint.isort]
known-first-party = ["stitch_workbench", "stitch"]
